Fixed tab scrolling down on countdown Fixed countdown stopping on any 2 seconds Fixed spacing on logo when home-button is invisible

--- a/css/map.css
+++ b/css/map.css
@@ -563,7 +563,6 @@ br.baseData {
 }
 
 #backgroundImage {
-    top: 62px;
     display: inline-block;
     background: #7bd1fc;
     width: 100%;
